Revision history for Perl extension MooseX-Getopt

   * Tests
        - Fix warning from tests with new Moose (t0m)
        - Fix tests on Win32 from RT#44909 (taro-nishino)

0.18 Thu. April 9 2009
	* MooseX::Getopt::Dashes
		- New module, for converting undercores to dashes (ilmari)

0.17 Wed. April 8 2009
  * MooseX::Getopt
		- work with latest Moose (hdp)

	~ unify module version numbers with dist version (hdp)

0.16 Tue. February 17 2009
	* t/
		- run pod tests only if RELEASE_TESTING env var is set

0.15 Sat. July 26 2008
	* MooseX::Getopt::OptionTypeMap
	  - Accept type constraint objects in the type mapping, not just names

0.14 Thurs. July 10, 2008
	* MooseX::Getopt::OptionTypeMap
	  - Change 'Float' which doesn't exist to 'Num' which does (perigrin)
	 
	* MooseX::Getopt
	  - removed the default handling with Getopt::Long::Descriptive
	    as it would override constructor parameters and that was 
	    bad. Besides, Moose will just DWIM on this anyway. (stevan)
	    - added test for it (stevan)

    * t/
      - fixed Getopt::Long::Descriptive specific tests to only run 
        if Getopt::Long::Descriptive is there (stevan)

0.13 Saturday, May 24, 2008
    * MooseX::Getopt
      - Commandline option shouldn't be required in the
        case that the given "required" attribute has
        been loaded from config (MooseX::ConfigFromFile)
      - Support for MooseX::ConfigFromFile shouldn't require
        that role be added at the same level as Getopt.
      - fixed miscapitalization of NoGetopt in the docs
      - added links to the traits in the docs
      
    ~ converted to Module::Install instead of 
      Module::Build

0.12 Fri. March 14, 2008
    ~~ updated copyright dates ~~

    - upped the Moose dependency to support
      the custom metaclass traits
    - added Getopt::Long::Descriptive as an
      optional dependency

    * MooseX::Getopt
      MooseX::Getopt::Meta::Attribute
      MooseX::Getopt::Meta::Attribute::Trait