@@ -193,7 +193,10 @@ sub _attrs_to_options {
 
         my $opt_string = join(q{|}, $flag, @aliases);
 
-        if ($attr->has_type_constraint) {
+        if ($attr->name eq 'configfile') {
+            $opt_string .= '=s';
+        }
+        elsif ($attr->has_type_constraint) {
             my $type = $attr->type_constraint;
             if (MooseX::Getopt::OptionTypeMap->has_option_type($type)) {
                 $opt_string .= MooseX::Getopt::OptionTypeMap->get_option_type($type)
